--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
     font-family: 'Nunito', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    /* background-color: #212121; */
+    background-color: #212121;
 }
 
 code {
